--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -8,17 +8,20 @@ background-color = #222
 body
   font-family 'Noto Sans', sans-serif
   background-color background-color
-  margin 0 0 8px 4px
+  margin 20px 20px 50px 20px
   color white
-  width 80%
+  a
+    color white
 
 header
   background-image url('../images/logo.png')
   background-position left top
   background-repeat no-repeat
-  background-attachment fixed
   height 64px
   margin 4px 0 8px 4px
+
+.login-anchor
+    color white
 
 .container
   #ttl-mssgs-container
