--- a/views/login.pug
+++ b/views/login.pug
@@ -1,5 +1,5 @@
 extend layout
 
 block content
-	a(href='/auth/google')
+	a(class='login-anchor' href='/auth/google')
 		| please, log in with your Google account
