--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,12 @@
-!!!5
+doctype html
 html(lang='en')
   head
     title ttl128
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='/socket.io/socket.io.js')
     script(src='/socketcomm.js')
-    
+
   body
     header
 
@@ -14,4 +14,4 @@ html(lang='en')
       block content
 
     footer
-      p Running on node with Express, Jade, Stylus, Socket.io and passport.js
+      p Running on node with Express, Pug, Stylus, Socket.io and passport
